--- a/package.json
+++ b/package.json
@@ -4,22 +4,21 @@
     "license": "MIT",
     "scripts": {
         "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "mix --production"
     },
     "dependencies": {
-        "highlight.js": "^10.4.1",
-        "reveal.js": "^4.1.0"
+        "highlight.js": "^11.4.0",
+        "reveal.js": "^4.2.1"
     },
     "devDependencies": {
-        "cross-env": "^7.0.2",
-        "laravel-mix": "^5.0.9",
-        "sass": "^1.29.0",
-        "sass-loader": "^8.0.2",
-        "tailwindcss": "^1.9.6",
-        "vue-template-compiler": "^2.6.12"
+        "laravel-mix": "^6.0.39",
+        "sass": "^1.47.0",
+        "sass-loader": "^12.4.0",
+        "tailwindcss": "^3.0.12"
     }
 }
