Update packages; point webpack to local directory

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/dist/deck.js": "/dist/deck.js",
-    "/dist/deck.css": "/dist/deck.css"
+    "/dist/deck.js": "/dist/deck.js?id=19bf56641955a23ca230496c9409bb7d",
+    "/dist/deck.css": "/dist/deck.css?id=de497c5fda1a8821d6ab5ed4ec2a0cf2"
 }
