--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     },
     "dependencies": {
         "highlight.js": "^11.4.0",
-        "reveal.js": "^4.2.1"
+        "reveal.js": "^4.2.1",
+        "tailwindcss": "^3.0.23"
     },
     "devDependencies": {
-        "laravel-mix": "^6.0.39",
-        "sass": "^1.47.0",
-        "sass-loader": "^12.4.0",
-        "tailwindcss": "^3.0.12"
+        "laravel-mix": "^6.0.43",
+        "sass": "^1.49.8",
+        "sass-loader": "^12.6.0"
     }
 }
